--- a/galaxy/firefox-i18n/.artixlinux/pkgbase.yaml
+++ b/galaxy/firefox-i18n/.artixlinux/pkgbase.yaml
@@ -1,113 +1,4 @@
 ---
-pkgbase:
-  name: firefox-i18n
-  version: 138.0.1-1
-  arch:
-    - any
-  pkgname:
-    - firefox-i18n-ach
-    - firefox-i18n-af
-    - firefox-i18n-an
-    - firefox-i18n-ar
-    - firefox-i18n-ast
-    - firefox-i18n-az
-    - firefox-i18n-be
-    - firefox-i18n-bg
-    - firefox-i18n-bn
-    - firefox-i18n-br
-    - firefox-i18n-bs
-    - firefox-i18n-ca
-    - firefox-i18n-ca-valencia
-    - firefox-i18n-cak
-    - firefox-i18n-cs
-    - firefox-i18n-cy
-    - firefox-i18n-da
-    - firefox-i18n-de
-    - firefox-i18n-dsb
-    - firefox-i18n-el
-    - firefox-i18n-en-ca
-    - firefox-i18n-en-gb
-    - firefox-i18n-en-us
-    - firefox-i18n-eo
-    - firefox-i18n-es-ar
-    - firefox-i18n-es-cl
-    - firefox-i18n-es-es
-    - firefox-i18n-es-mx
-    - firefox-i18n-et
-    - firefox-i18n-eu
-    - firefox-i18n-fa
-    - firefox-i18n-ff
-    - firefox-i18n-fi
-    - firefox-i18n-fr
-    - firefox-i18n-fur
-    - firefox-i18n-fy-nl
-    - firefox-i18n-ga-ie
-    - firefox-i18n-gd
-    - firefox-i18n-gl
-    - firefox-i18n-gn
-    - firefox-i18n-gu-in
-    - firefox-i18n-he
-    - firefox-i18n-hi-in
-    - firefox-i18n-hr
-    - firefox-i18n-hsb
-    - firefox-i18n-hu
-    - firefox-i18n-hy-am
-    - firefox-i18n-ia
-    - firefox-i18n-id
-    - firefox-i18n-is
-    - firefox-i18n-it
-    - firefox-i18n-ja
-    - firefox-i18n-ka
-    - firefox-i18n-kab
-    - firefox-i18n-kk
-    - firefox-i18n-km
-    - firefox-i18n-kn
-    - firefox-i18n-ko
-    - firefox-i18n-lij
-    - firefox-i18n-lt
-    - firefox-i18n-lv
-    - firefox-i18n-mk
-    - firefox-i18n-mr
-    - firefox-i18n-ms
-    - firefox-i18n-my
-    - firefox-i18n-nb-no
-    - firefox-i18n-ne-np
-    - firefox-i18n-nl
-    - firefox-i18n-nn-no
-    - firefox-i18n-oc
-    - firefox-i18n-pa-in
-    - firefox-i18n-pl
-    - firefox-i18n-pt-br
-    - firefox-i18n-pt-pt
-    - firefox-i18n-rm
-    - firefox-i18n-ro
-    - firefox-i18n-ru
-    - firefox-i18n-sat
-    - firefox-i18n-sc
-    - firefox-i18n-sco
-    - firefox-i18n-si
-    - firefox-i18n-sk
-    - firefox-i18n-skr
-    - firefox-i18n-sl
-    - firefox-i18n-son
-    - firefox-i18n-sq
-    - firefox-i18n-sr
-    - firefox-i18n-sv-se
-    - firefox-i18n-szl
-    - firefox-i18n-ta
-    - firefox-i18n-te
-    - firefox-i18n-tg
-    - firefox-i18n-th
-    - firefox-i18n-tl
-    - firefox-i18n-tr
-    - firefox-i18n-trs
-    - firefox-i18n-uk
-    - firefox-i18n-ur
-    - firefox-i18n-uz
-    - firefox-i18n-vi
-    - firefox-i18n-xh
-    - firefox-i18n-zh-cn
-    - firefox-i18n-zh-tw
 actions:
   addRepo: galaxy
   removeRepo: galaxy-gremlins
@@ -120,140 +11,152 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 138.0.1-1
+    version: 138.0.3-1
     packages:
-      - firefox-i18n-ach-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-af-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-an-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-ar-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-ast-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-az-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-be-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-bg-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-bn-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-br-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-bs-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-ca-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-ca-valencia-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-cak-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-cs-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-cy-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-da-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-de-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-dsb-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-el-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-en-ca-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-en-gb-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-en-us-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-eo-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-es-ar-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-es-cl-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-es-es-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-es-mx-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-et-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-eu-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-fa-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-ff-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-fi-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-fr-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-fur-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-fy-nl-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-ga-ie-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-gd-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-gl-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-gn-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-gu-in-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-he-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-hi-in-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-hr-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-hsb-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-hu-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-hy-am-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-ia-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-id-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-is-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-it-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-ja-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-ka-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-kab-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-kk-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-km-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-kn-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-ko-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-lij-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-lt-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-lv-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-mk-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-mr-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-ms-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-my-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-nb-no-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-ne-np-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-nl-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-nn-no-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-oc-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-pa-in-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-pl-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-pt-br-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-pt-pt-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-rm-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-ro-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-ru-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-sat-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-sc-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-sco-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-si-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-sk-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-skr-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-sl-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-son-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-sq-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-sr-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-sv-se-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-szl-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-ta-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-te-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-tg-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-th-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-tl-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-tr-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-trs-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-uk-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-ur-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-uz-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-vi-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-xh-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-zh-cn-138.0.1-1-any.pkg.tar.zst
-      - firefox-i18n-zh-tw-138.0.1-1-any.pkg.tar.zst
+      - firefox-i18n-ach-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-af-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-an-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-ar-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-ast-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-az-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-be-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-bg-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-bn-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-br-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-bs-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-ca-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-ca-valencia-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-cak-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-cs-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-cy-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-da-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-de-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-dsb-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-el-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-en-ca-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-en-gb-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-en-us-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-eo-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-es-ar-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-es-cl-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-es-es-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-es-mx-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-et-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-eu-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-fa-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-ff-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-fi-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-fr-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-fur-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-fy-nl-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-ga-ie-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-gd-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-gl-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-gn-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-gu-in-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-he-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-hi-in-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-hr-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-hsb-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-hu-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-hy-am-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-ia-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-id-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-is-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-it-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-ja-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-ka-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-kab-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-kk-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-km-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-kn-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-ko-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-lij-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-lt-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-lv-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-mk-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-mr-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-ms-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-my-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-nb-no-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-ne-np-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-nl-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-nn-no-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-oc-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-pa-in-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-pl-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-pt-br-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-pt-pt-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-rm-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-ro-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-ru-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-sat-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-sc-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-sco-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-si-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-sk-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-skr-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-sl-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-son-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-sq-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-sr-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-sv-se-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-szl-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-ta-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-te-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-tg-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-th-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-tl-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-tr-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-trs-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-uk-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-ur-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-uz-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-vi-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-xh-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-zh-cn-138.0.3-1-any.pkg.tar.zst
+      - firefox-i18n-zh-tw-138.0.3-1-any.pkg.tar.zst
+    debug: []
 team: galaxy
