--- a/world/libcamera/.artixlinux/pkgbase.yaml
+++ b/world/libcamera/.artixlinux/pkgbase.yaml
@@ -1,16 +1,4 @@
 ---
-pkgbase:
-  name: libcamera
-  version: 0.5.0-1
-  arch:
-    - x86_64
-  pkgname:
-    - libcamera
-    - libcamera-docs
-    - libcamera-ipa
-    - libcamera-tools
-    - gst-plugin-libcamera
-    - python-libcamera
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -23,43 +11,55 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 0.5.0-1
+    version: 0.5.0-2
     packages:
-      - libcamera-0.5.0-1-x86_64.pkg.tar.zst
-      - libcamera-docs-0.5.0-1-x86_64.pkg.tar.zst
-      - libcamera-ipa-0.5.0-1-x86_64.pkg.tar.zst
-      - libcamera-tools-0.5.0-1-x86_64.pkg.tar.zst
-      - gst-plugin-libcamera-0.5.0-1-x86_64.pkg.tar.zst
-      - python-libcamera-0.5.0-1-x86_64.pkg.tar.zst
+      - libcamera-0.5.0-2-x86_64.pkg.tar.zst
+      - libcamera-docs-0.5.0-2-x86_64.pkg.tar.zst
+      - libcamera-ipa-0.5.0-2-x86_64.pkg.tar.zst
+      - libcamera-tools-0.5.0-2-x86_64.pkg.tar.zst
+      - gst-plugin-libcamera-0.5.0-2-x86_64.pkg.tar.zst
+      - python-libcamera-0.5.0-2-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
