--- a/world/fribidi/PKGBUILD
+++ b/world/fribidi/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=fribidi
 pkgver=1.0.16
-pkgrel=1
+pkgrel=2
 pkgdesc="A Free Implementation of the Unicode Bidirectional Algorithm"
 url="https://github.com/fribidi/fribidi"
 arch=(x86_64)
@@ -30,21 +30,22 @@ validpgpkeys=(
 prepare() {
   mkdir -p path
 
-  # Fix compilation with GCC 14
-  echo "cc='gcc -fpermissive'" > c2man/config.sh
+  # Fix compilation with GCC 15
+  echo "cc='gcc -fpermissive -std=gnu17'" > c2man/config.sh
 
   cd fribidi
 }
 
 build() {
   local meson_options=(
+    -D docs=true
   )
 
-  cd c2man
+  pushd c2man
   ./Configure -des
   make
   cp c2man -t ../path
-  cd ..
+  popd
 
   PATH="$PWD/path:$PATH" artix-meson fribidi build "${meson_options[@]}"
   meson compile -C build
