--- a/world/harfbuzz/.artixlinux/pkgbase.yaml
+++ b/world/harfbuzz/.artixlinux/pkgbase.yaml
@@ -1,15 +1,4 @@
 ---
-pkgbase:
-  name: harfbuzz
-  version: 11.2.0-1
-  arch:
-    - x86_64
-  pkgname:
-    - harfbuzz
-    - harfbuzz-cairo
-    - harfbuzz-icu
-    - harfbuzz-utils
-    - harfbuzz-docs
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -22,42 +11,54 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 11.2.0-1
+    version: 11.2.1-1
     packages:
-      - harfbuzz-11.2.0-1-x86_64.pkg.tar.zst
-      - harfbuzz-cairo-11.2.0-1-x86_64.pkg.tar.zst
-      - harfbuzz-icu-11.2.0-1-x86_64.pkg.tar.zst
-      - harfbuzz-utils-11.2.0-1-x86_64.pkg.tar.zst
-      - harfbuzz-docs-11.2.0-1-x86_64.pkg.tar.zst
+      - harfbuzz-11.2.1-1-x86_64.pkg.tar.zst
+      - harfbuzz-cairo-11.2.1-1-x86_64.pkg.tar.zst
+      - harfbuzz-icu-11.2.1-1-x86_64.pkg.tar.zst
+      - harfbuzz-utils-11.2.1-1-x86_64.pkg.tar.zst
+      - harfbuzz-docs-11.2.1-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
