--- a/world/kvantum/.artixlinux/pkgbase.yaml
+++ b/world/kvantum/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: kvantum
-  version: 1.1.4-1
-  arch:
-    - x86_64
-  pkgname:
-    - kvantum
-    - kvantum-qt5
 actions:
   addRepo: world
   removeRepo: null
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1.1.4-1
+    version: 1.1.5-1
     packages:
-      - kvantum-1.1.4-1-x86_64.pkg.tar.zst
-      - kvantum-qt5-1.1.4-1-x86_64.pkg.tar.zst
+      - kvantum-1.1.5-1-x86_64.pkg.tar.zst
+      - kvantum-qt5-1.1.5-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
