--- a/world/openucx/.artixlinux/pkgbase.yaml
+++ b/world/openucx/.artixlinux/pkgbase.yaml
@@ -2,11 +2,11 @@
 team: world
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -26,14 +26,13 @@ repos:
     packages: []
     debug: []
   world-gremlins:
-    version: 1.18.1-1
-    packages:
-      - openucx-1.18.1-1-x86_64.pkg.tar.zst
+    version: null
+    packages: []
     debug: []
   world:
-    version: 1.18.1-1
+    version: 1.18.1-2
     packages:
-      - openucx-1.18.1-1-x86_64.pkg.tar.zst
+      - openucx-1.18.1-2-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
