--- a/world/protobuf/.artixlinux/pkgbase.yaml
+++ b/world/protobuf/.artixlinux/pkgbase.yaml
@@ -1,13 +1,4 @@
 ---
-pkgbase:
-  name: protobuf
-  version: 30.2-1
-  arch:
-    - x86_64
-  pkgname:
-    - protobuf
-    - python-protobuf
-    - ruby-google-protobuf
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -20,40 +11,52 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 30.2-1
+    version: 30.2-2
     packages:
-      - protobuf-30.2-1-x86_64.pkg.tar.zst
-      - python-protobuf-30.2-1-x86_64.pkg.tar.zst
-      - ruby-google-protobuf-30.2-1-x86_64.pkg.tar.zst
+      - protobuf-30.2-2-x86_64.pkg.tar.zst
+      - python-protobuf-30.2-2-x86_64.pkg.tar.zst
+      - ruby-google-protobuf-30.2-2-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
