Updated rocm-opencl-runtime - 6.4.0-1.1

--- a/world/rocm-opencl-runtime/.nvchecker.toml
+++ b/world/rocm-opencl-runtime/.nvchecker.toml
@@ -1,5 +1,5 @@
 [rocm-opencl-runtime]
-source = 'github'
-github = 'ROCm/clr'
-use_latest_release = true
+source = 'git'
+git = 'https://github.com/ROCm/clr.git'
 prefix = 'rocm-'
+include_regex = 'rocm-.*'
