--- a/world/rocm-opencl-runtime/.artixlinux/pkgbase.yaml
+++ b/world/rocm-opencl-runtime/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: rocm-opencl-runtime
-  version: 6.3.3-1
-  arch:
-    - x86_64
-  pkgname:
-    - rocm-opencl-runtime
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 6.3.3-1
+    version: 6.4.0-1.1
     packages:
-      - rocm-opencl-runtime-6.3.3-1-x86_64.pkg.tar.zst
+      - rocm-opencl-runtime-6.4.0-1.1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
