--- a/world/btop/.artixlinux/pkgbase.yaml
+++ b/world/btop/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -25,14 +25,13 @@ repos:
     packages: []
     debug: []
   world-gremlins:
-    version: 1.4.2-2
-    packages:
-      - btop-1.4.2-2-x86_64.pkg.tar.zst
+    version: null
+    packages: []
     debug: []
   world:
-    version: 1.4.3-1
+    version: 1.4.3-2
     packages:
-      - btop-1.4.3-1-x86_64.pkg.tar.zst
+      - btop-1.4.3-2-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
