--- a/world/rocm-llvm/.artixlinux/pkgbase.yaml
+++ b/world/rocm-llvm/.artixlinux/pkgbase.yaml
@@ -1,13 +1,4 @@
 ---
-pkgbase:
-  name: rocm-llvm
-  version: 6.3.3-2
-  arch:
-    - x86_64
-  pkgname:
-    - rocm-llvm
-    - rocm-device-libs
-    - comgr
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -20,40 +11,52 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 6.3.3-2
+    version: 6.4.0-4
     packages:
-      - rocm-llvm-6.3.3-2-x86_64.pkg.tar.zst
-      - rocm-device-libs-6.3.3-2-x86_64.pkg.tar.zst
-      - comgr-6.3.3-2-x86_64.pkg.tar.zst
+      - rocm-llvm-6.4.0-4-x86_64.pkg.tar.zst
+      - rocm-device-libs-6.4.0-4-x86_64.pkg.tar.zst
+      - comgr-6.4.0-4-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
