--- a/world/hipify-clang/PKGBUILD
+++ b/world/hipify-clang/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Torsten Keßler <tpkessler at archlinux dot org>
 pkgname=hipify-clang
-pkgver=6.0.2
+pkgver=6.4.0
 pkgrel=1
 pkgdesc='Convert CUDA to Portable C++ Code'
 arch=('x86_64')
@@ -10,17 +10,10 @@ depends=('glibc' 'gcc-libs' 'ncurses' 'bash' 'perl' 'zstd' 'zlib'
          'rocm-llvm' 'cuda')
 makedepends=('cmake')
 _git='https://github.com/ROCm-Developer-Tools/HIPIFY'
-source=("${pkgname}-${pkgver}.tar.gz::$_git/archive/rocm-$pkgver.tar.gz"
-        "hipify-fix-install-cmake.patch")
-sha256sums=('21e46276677ec8c00e61c0cbf5fa42185517f6af0d4845ea877fd40eb35198c4'
-            '64d422e402b2f93cc83df2b762cf9f06f2b9b358de2643abff78298f875acd0a')
+source=("${pkgname}-${pkgver}.tar.gz::$_git/archive/rocm-$pkgver.tar.gz")
+sha256sums=('874e3ee9801f795aaae30d6ea86e5edc991d5f71a5dee0a8e8eb7ce6379a51eb')
 options=(!lto)
 _dirname="$(basename "$_git")-$(basename "${source[0]}" .tar.gz)"
-
-prepare() {
-  cd "$_dirname"
-  patch -Np1 -i "$srcdir/hipify-fix-install-cmake.patch"
-}
 
 build() {
   local cmake_args=(
@@ -37,6 +30,8 @@ build() {
 
 package() {
   DESTDIR="$pkgdir" cmake --install build
+  # The script hipify-perl is generated read-only
+  chmod a+x "$pkgdir/opt/rocm/bin/hipify-perl"
 
   install -Dm644 "$_dirname/LICENSE.txt" "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
 }
