--- a/world/rccl/.nvchecker.toml
+++ b/world/rccl/.nvchecker.toml
@@ -1,5 +1,5 @@
 [rccl]
-source = 'github'
-github = 'ROCm/rccl'
-use_latest_release = true
+source = 'git'
+git = 'https://github.com/ROCm/rccl.git'
 prefix = 'rocm-'
+include_regex = 'rocm-.*'
