--- a/world/libgudev/PKGBUILD
+++ b/world/libgudev/PKGBUILD
@@ -1,40 +1,35 @@
-# Maintainer: Evangelos Foutras <evangelos@foutrelis.com>
+# Maintainer: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
+# Contributor: Evangelos Foutras <foutrelis@archlinux.org>
 
 pkgname=libgudev
 pkgver=238
-pkgrel=1
+pkgrel=3
 pkgdesc="GObject bindings for libudev"
-url="https://wiki.gnome.org/Projects/libgudev"
+url="https://gitlab.gnome.org/GNOME/libgudev"
 arch=(x86_64)
-license=(LGPL2.1)
+license=(LGPL-2.1-or-later)
 depends=(
+  gcc-libs
   glib2
-  udev
+  glibc
+  libudev
 )
 makedepends=(
   git
+  glib2-devel
+  glibc-locales
   gobject-introspection
   gtk-doc
   meson
+  udev
   umockdev
   vala
 )
-_commit=df7c9c9940160307aaeb31347f4776a46f8736a9  # tags/238^0
-source=("git+https://gitlab.gnome.org/GNOME/libgudev.git#commit=$_commit")
-b2sums=('SKIP')
-
-pkgver() {
-  cd libgudev
-  git describe --tags | sed 's/[^-]*-g/r&/;s/-/+/g'
-}
+source=("git+$url.git#tag=$pkgver")
+b2sums=('6da9512d87154fbd62aae044a39abd84bee451f5a21203180062c369ebedf2ee1bc7672408cf806918111397bc74be58314e6c3155e638137603d11012a4355f')
 
 prepare() {
   cd libgudev
-
-  # Use a locale with "," decimal separator that we
-  # actually have available in the build environments
-  sed -e 's/fr_FR\.UTF-8/de_DE.UTF-8/g' \
-      -i tests/meson.build tests/test-double.c
 }
 
 build() {
@@ -51,7 +46,10 @@ check() {
 }
 
 package() {
-  depends+=(libg{lib,object}-2.0.so libudev.so)
+  depends+=(
+    libg{lib,object}-2.0.so
+    libudev.so
+  )
   provides+=(libgudev-1.0.so)
 
   meson install -C build --destdir "$pkgdir"
