--- a/world/webkit2gtk-4.1/.artixlinux/pkgbase.yaml
+++ b/world/webkit2gtk-4.1/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: webkit2gtk-4.1
-  version: 2.48.1-2
-  arch:
-    - x86_64
-  pkgname:
-    - webkit2gtk-4.1
-    - webkit2gtk-4.1-docs
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 2.48.1-2
+    version: 2.48.2-1
     packages:
-      - webkit2gtk-4.1-2.48.1-2-x86_64.pkg.tar.zst
-      - webkit2gtk-4.1-docs-2.48.1-2-x86_64.pkg.tar.zst
+      - webkit2gtk-4.1-2.48.2-1-x86_64.pkg.tar.zst
+      - webkit2gtk-4.1-docs-2.48.2-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
