--- a/world/webkitgtk-6.0/.artixlinux/pkgbase.yaml
+++ b/world/webkitgtk-6.0/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: webkitgtk-6.0
-  version: 2.48.1-2
-  arch:
-    - x86_64
-  pkgname:
-    - webkitgtk-6.0
-    - webkitgtk-6.0-docs
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 2.48.1-2
+    version: 2.48.2-1
     packages:
-      - webkitgtk-6.0-2.48.1-2-x86_64.pkg.tar.zst
-      - webkitgtk-6.0-docs-2.48.1-2-x86_64.pkg.tar.zst
+      - webkitgtk-6.0-2.48.2-1-x86_64.pkg.tar.zst
+      - webkitgtk-6.0-docs-2.48.2-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
