--- a/world/syncthing/PKGBUILD
+++ b/world/syncthing/PKGBUILD
@@ -6,19 +6,20 @@
 # Contributor: Kevin MacMartin <prurigro@gmail.com>
 # Contributor: korjjj <korjjj+aur@gmail.com>
 
-pkgname=('syncthing' 'syncthing-discosrv' 'syncthing-relaysrv')
+pkgname=(syncthing syncthing-discosrv syncthing-relaysrv)
 pkgver=1.29.6
-pkgrel=1
+pkgrel=2
 pkgdesc='Open Source Continuous Replication / Cluster Synchronization Thing'
-arch=('x86_64')
-url="https://syncthing.net/"
+arch=(x86_64)
+url='https://syncthing.net/'
 license=('MPL-2.0')
-depends=('glibc')
-makedepends=('git' 'go')
-source=(https://github.com/syncthing/syncthing/releases/download/v$pkgver/syncthing-source-v${pkgver}.tar.gz{,.asc}
+depends=(glibc)
+makedepends=(git go)
+source=("https://github.com/syncthing/syncthing/releases/download/v$pkgver/syncthing-source-v$pkgver.tar.gz"{,.asc}
         syncthing-{disco,relay}srv.sysusers
         syncthing-{disco,relay}srv.tmpfiles
         gcc-pie-segfaults-race.patch)
+options=(!lto) # https://github.com/golang/go/pull/53528
 validpgpkeys=('37C84554E7E0A261E4F76E1ED26E6ED000654A3E') # Syncthing Release Management
 sha256sums=('28e7f4984a6a34fb4697448141ce2611a6510f5a4369c1669d4e766eb75cd878'
             'SKIP'
@@ -47,7 +48,7 @@ build() {
   export CGO_CFLAGS="${CFLAGS}"
   export CGO_CXXFLAGS="${CXXFLAGS}"
   export CGO_LDFLAGS="${LDFLAGS}"
-  export GOFLAGS="-buildmode=pie -trimpath -ldflags=-linkmode=external -mod=readonly -modcacherw"
+  export GOFLAGS="-buildmode=pie -ldflags=-linkmode=external -mod=readonly -modcacherw"
   go run build.go -no-upgrade -version v${pkgver} build
   go run build.go -no-upgrade -version v${pkgver} build strelaysrv
   go run build.go -no-upgrade -version v${pkgver} build stdiscosrv
