Updated linux-rt-lts - 6.6.87.rt54.artix1-1

--- a/galaxy/linux-rt-lts/.artixlinux/pkgbase.yaml
+++ b/galaxy/linux-rt-lts/.artixlinux/pkgbase.yaml
@@ -1,59 +1,62 @@
 ---
-pkgbase:
-  name: linux-rt-lts
-  version: 6.6.52.rt43.artix1-5
-  arch:
-    - x86_64
-  pkgname:
-    - linux-rt-lts
-    - linux-rt-lts-headers
-    - linux-rt-lts-docs
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 6.6.52.rt43.artix1-5
+    version: 6.6.87.rt54.artix1-1
     packages:
-      - linux-rt-lts-6.6.52.rt43.artix1-5-x86_64.pkg.tar.zst
-      - linux-rt-lts-headers-6.6.52.rt43.artix1-5-x86_64.pkg.tar.zst
-      - linux-rt-lts-docs-6.6.52.rt43.artix1-5-x86_64.pkg.tar.zst
+      - linux-rt-lts-6.6.87.rt54.artix1-1-x86_64.pkg.tar.zst
+      - linux-rt-lts-headers-6.6.87.rt54.artix1-1-x86_64.pkg.tar.zst
+      - linux-rt-lts-docs-6.6.87.rt54.artix1-1-x86_64.pkg.tar.zst
+    debug: []
 team: galaxy
