Updated ruby-sass-embedded - 1.87.0-1

--- a/world/ruby-sass-embedded/.artixlinux/pkgbase.yaml
+++ b/world/ruby-sass-embedded/.artixlinux/pkgbase.yaml
@@ -1,12 +1,12 @@
 ---
 team: world
 actions:
-  addRepo: world-gremlins
-  removeRepo: null
-  triggersBuild: true
+  addRepo: world
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -26,9 +26,8 @@ repos:
     packages: []
     debug: []
   world-gremlins:
-    version: 1.87.0-1
-    packages:
-      - ruby-sass-embedded-1.87.0-1-any.pkg.tar.zst
+    version: null
+    packages: []
     debug: []
   world:
     version: 1.87.0-1
